--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -8,6 +8,8 @@ MLJ = "add582a8-e3ab-11e8-2d5e-e98b27df1bc7"
 MLJBase = "a7f614a8-145f-11e9-1d2a-a57a1082229d"
 MLJXGBoostInterface = "54119dfa-1dab-4055-a167-80440f4f7a91"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
+Weave = "44d3d7a6-8a23-5bf8-98c5-b353f8df5ec9"
 XGBoost = "009559a3-9522-5dbb-924b-0b6ed2b22bb9"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
